Delete attraction functionality added. Accessible through the attractions table (there is a menu per row that is lazily loaded). Create attraction slightly broken in that a user has no locations and statuses (the list is now generated by a user's own location and status collection). The fix is to add similar functionality of adding default attractions.

--- a/src/app/pages/attractions/attractions.component.scss
+++ b/src/app/pages/attractions/attractions.component.scss
@@ -1,11 +1,15 @@
 .active {
-    color: green;
+  color: green;
 }
 
 .inactive {
-    color: red;
+  color: red;
 }
 
 .warn {
-    color: darkorange;
+  color: darkorange;
+}
+
+.mat-column-more {
+  flex: 0 0 50px;
 }
